# qrback

./: Cargo.toml  LICENSE  README.md  flake.nix
scripts/: qregion.sh  qregion4.sh  qregion8.sh
src/: constants.rs  document.rs  main.rs  qrcode.rs  utils.rs
